src/test/resources/bad/provided/029b-override-bad-type.lat
class A {
 void test() {}
}
class B extends A {
 int test() { return 0; }
}

int main() {
 A a = new A;
 B b = new B;

 return 0;
}
